[tool.poetry]
name = "tatoeba-to-anki"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wordfreq = "*"
genanki = "*"
gTTS = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "*"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
