[tool.poetry]
name = "tatoeba-to-anki"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
wordfreq = {extras = ["cjk"], version = "^3.0.2"}
tatoebatools = "^0.2.1"
edge-tts = "^5.0.6"
ebook-dictionary-creator = {git = "https://github.com/Vuizur/ebook_dictionary_creator"}
gtts = "^2.2.4"
genanki = "^0.13.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "*"
black = {version = "^22.3.0", allow-prereleases = true}
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
